RESOLVED FIXED138322
Fix the !ENABLE(VIDEO) build after r175380
https://bugs.webkit.org/show_bug.cgi?id=138322
Summary Fix the !ENABLE(VIDEO) build after r175380
Csaba Osztrogonác
Reported 2014-11-03 12:43:10 PST
Fix the !ENABLE(VIDEO) build after r175380
Attachments
Patch (1.36 KB, patch)
2014-11-03 12:43 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2014-11-03 12:43:22 PST
WebKit Commit Bot
Comment 2 2014-11-04 01:49:07 PST
Comment on attachment 240870 [details] Patch Clearing flags on attachment: 240870 Committed r175527: <http://trac.webkit.org/changeset/175527>
WebKit Commit Bot
Comment 3 2014-11-04 01:49:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.