Fix the !ENABLE(VIDEO) build after r175380 https://bugs.webkit.org/show_bug.cgi?id=138322

Reviewed by Benjamin Poulain.

* html/HTMLImageLoader.cpp:
(WebCore::HTMLImageLoader::dispatchLoadEvent):


Canonical link: https://commits.webkit.org/156184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175527 268f45cc-cd09-0410-ab3c-d52691b4dbfc